syntax = "proto3";

package proto;

option go_package = "api/generated";

message RegisterUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterUserResponse {
    string token = 1;
}

message AuthenticateUserRequest {
    string username = 1;
    string password = 2;
}

message AuthenticateUserResponse {
    string token = 1;
}

service EncryNestUserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
}